--- a/equipmentMS/university/courses.html
+++ b/equipmentMS/university/courses.html
@@ -15,7 +15,13 @@
 <!-- Core css -->
 <link rel="stylesheet" href="../assets/css/style.min.css"/>
 </head>
+<style type="text/css">
+    div.card{
 
+    height: 352px;
+
+    }
+</style>
 <body class="font-muli theme-cyan gradient">
 
 <!-- Page Loader -->
@@ -230,7 +236,9 @@
     </div>
     <!-- Start Theme panel do not add in project -->
     <div class="theme_div">
-        <div class="card">
+        <div class="card" style="
+    height: 352px;
+">
             <div class="card-body">
                 <ul class="list-group list-unstyled">
                     <li class="list-group-item mb-2">
@@ -766,7 +774,7 @@
     </div>
     <!-- Start Main leftbar navigation -->
     <div id="left-sidebar" class="sidebar">
-        <h5 class="brand-name">Ericsson<a href="javascript:void(0)" class="menu_option float-right"><i class="icon-grid font-16" data-toggle="tooltip" data-placement="left" title="Grid & List Toggle"></i></a></h5>
+        <h5 class="brand-name">实验器材管理系统<a href="javascript:void(0)" class="menu_option float-right"><i class="icon-grid font-16" data-toggle="tooltip" data-placement="left" title="Grid & List Toggle"></i></a></h5>
         <ul class="nav nav-tabs">
             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#menu-uni">University</a></li>
             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#menu-admin">Admin</a></li>
@@ -780,7 +788,7 @@
                         <li><a href="staff.html"><i class="fa fa-user-circle-o"></i><span>Staff</span></a></li>
                         <li><a href="students.html"><i class="fa fa-users"></i><span>Students</span></a></li>
                         <li><a href="departments.html"><i class="fa fa-users"></i><span>Departments</span></a></li>
-                        <li class="active"><a href="courses.html"><i class="fa fa-graduation-cap"></i><span>Courses</span></a></li>                        
+                        <li class="active"><a href="courses.html"><i class="fa fa-graduation-cap"></i><span>课程管理</span></a></li>                        
                         <li><a href="library.html"><i class="fa fa-book"></i><span>Library</span></a></li>
                         <li><a href="holiday.html"><i class="fa fa-bullhorn"></i><span>Holiday</span></a></li>
                         <li class="g_heading">Extra</li>
@@ -817,9 +825,9 @@
                 <div class="page-header">
                     <div class="left">                        
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="What you want to find">
+                            <input type="text" class="form-control" placeholder="搜索课程">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button">Search</button>
+                                <button class="btn btn-outline-secondary" type="button">搜索</button>
                             </div>
                         </div>
                     </div>
@@ -837,11 +845,11 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Auth</a>
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">用户</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="login.html">Login</a>
-                                    <a class="dropdown-item" href="register.html">Register</a>
-                                    <a class="dropdown-item" href="forgot-password.html">Forgot password</a>
+                                    <a class="dropdown-item" href="login.html">登录</a>
+                                    <a class="dropdown-item" href="register.html">注册</a>
+                                    <a class="dropdown-item" href="forgot-password.html">忘记密码</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="404.html">404 error</a>
                                     <a class="dropdown-item" href="500.html">500 error</a>
@@ -957,13 +965,13 @@
                                 <a href="javascript:void(0)" class="chip ml-3" data-toggle="dropdown">
                                     <span class="avatar" style="background-image: url(../assets/images/xs/avatar5.jpg)"></span> George</a>
                                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                    <a class="dropdown-item" href="page-profile.html"><i class="dropdown-icon fe fe-user"></i> Profile</a>
-                                    <a class="dropdown-item" href="app-setting.html"><i class="dropdown-icon fe fe-settings"></i> Settings</a>
-                                    <a class="dropdown-item" href="app-email.html"><span class="float-right"><span class="badge badge-primary">6</span></span><i class="dropdown-icon fe fe-mail"></i> Inbox</a>
-                                    <a class="dropdown-item" href="javascript:void(0)"><i class="dropdown-icon fe fe-send"></i> Message</a>
+                                    <a class="dropdown-item" href="page-profile.html"><i class="dropdown-icon fe fe-user"></i> 个人信息</a>
+                                    <a class="dropdown-item" href="app-setting.html"><i class="dropdown-icon fe fe-settings"></i> 设置</a>
+                                    <!-- <a class="dropdown-item" href="app-email.html"><span class="float-right"><span class="badge badge-primary">6</span></span><i class="dropdown-icon fe fe-mail"></i> Inbox</a>
+                                    <a class="dropdown-item" href="javascript:void(0)"><i class="dropdown-icon fe fe-send"></i> Message</a> -->
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="javascript:void(0)"><i class="dropdown-icon fe fe-help-circle"></i> Need help?</a>
-                                    <a class="dropdown-item" href="login.html"><i class="dropdown-icon fe fe-log-out"></i> Sign out</a>
+                                    <a class="dropdown-item" href="javascript:void(0)"><i class="dropdown-icon fe fe-help-circle"></i> 帮助</a>
+                                    <a class="dropdown-item" href="login.html"><i class="dropdown-icon fe fe-log-out"></i> 退出</a>
                                 </div>
                             </div>
                         </div>
@@ -976,16 +984,16 @@
             <div class="container-fluid">
                 <div class="d-flex justify-content-between align-items-center ">
                     <div class="header-action">
-                        <h1 class="page-title">Courses</h1>
+                        <h1 class="page-title">课程管理</h1>
                         <ol class="breadcrumb page-breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Ericsson</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Courses</li>
+                            <li class="breadcrumb-item"><a href="#">实验器材管理系统</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">课程管理</li>
                         </ol>
                     </div>
                     <ul class="nav nav-tabs page-header-tab">
-                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#Courses-all">List View</a></li>
-                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Courses-add">Add</a></li>
-                        <li class="nav-item"><a class="nav-link" id="Courses-tab-Boot" data-toggle="tab" href="#Courses-add-Boot">Add Bootstrap Style</a></li>
+                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#Courses-all">课程列表</a></li>
+                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Courses-add">添加开课计划</a></li>
+                        <li class="nav-item"><a class="nav-link" id="Courses-tab-Boot" data-toggle="tab" href="#Courses-add-Boot">添加课程</a></li>
                     </ul>
                 </div>
             </div>
@@ -997,7 +1005,7 @@
                         <div class="row row-deck">
                             <div class="col-xl-4 col-lg-4 col-md-6">
                                 <div class="card">
-                                    <a href="#"><img class="card-img-top" src="../assets/images/gallery/1.jpg" alt=""></a>
+                                    <!-- <a href="#"></a> -->
                                     <div class="card-body d-flex flex-column">
                                         <h5><a href="courses-details.html">PHP Development Course</a></h5>
                                         <div class="text-muted">Look, my liege! The Knights Who Say Ni demand a sacrifice!</div>
@@ -1253,7 +1261,7 @@
                     <div class="tab-pane" id="Courses-add">
                         <div class="card">
                             <div class="card-header">
-                                <h3 class="card-title">Department Basic Info</h3>
+                                <h3 class="card-title">添加开课计划</h3>
                                 <div class="card-options ">
                                     <a href="#" class="card-options-collapse" data-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a>
                                     <a href="#" class="card-options-remove" data-toggle="card-remove"><i class="fe fe-x"></i></a>
@@ -1263,37 +1271,33 @@
                                 <div class="row clearfix">
                                     <div class="col-sm-6">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Department Name ">
+                                            <input type="text" class="form-control" placeholder="课程">
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="col-sm-6">
+                                        <div class="form-group">
+                                            <input type="number" class="form-control" placeholder="开课人数 ">
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Head of Department">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <input type="number" class="form-control" placeholder="No. of Students ">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <input data-provide="datepicker" data-date-autoclose="true" class="form-control" placeholder="Department Start Date">
+                                            <input data-provide="datepicker" data-date-autoclose="true" class="form-control" placeholder="开课时间">
                                         </div>
                                     </div>
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <textarea rows="4" class="form-control no-resize" placeholder="Brief"></textarea>
+                                            <textarea rows="4" class="form-control no-resize" placeholder="备注"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-sm-12">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                        <button type="submit" class="btn btn-outline-secondary btn-default">Cancel</button>
+                                        <button type="submit" class="btn btn-primary">提交</button>
+                                        <button type="submit" class="btn btn-outline-secondary btn-default">取消</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <!-- <div class="card">
                             <div class="card-header">
                                 <h3 class="card-title">Staff Member Account Info</h3>
                                 <div class="card-options ">
@@ -1303,28 +1307,30 @@
                             </div>
                             <div class="card-body">
                                 <div class="row clearfix">
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Email">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Phone">
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                        <button type="submit" class="btn btn-outline-secondary btn-default">Cancel</button>
-                                    </div>
+                                   <div class="col-sm-12">
+                                       <div class="form-group">
+                                           <input type="text" class="form-control" placeholder="Email">
+                                       </div>
+                                   </div>
+                                   <div class="col-sm-12">
+                                       <div class="form-group">
+                                           <input type="text" class="form-control" placeholder="Phone">
+                                       </div>
+                                   </div>
+                                   <div class="col-sm-12">
+                                       <button type="submit" class="btn btn-primary">Submit</button>
+                                       <button type="submit" class="btn btn-outline-secondary btn-default">Cancel</button>
+                                   </div>
                                 </div>                        
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="tab-pane" id="Courses-add-Boot">
-                        <div class="card">
+                        <div class="card" style="
+    height: 352px;
+">
                             <div class="card-header">
-                                <h3 class="card-title">Add Department</h3>
+                                <h3 class="card-title">添加课程</h3>
                                 <div class="card-options ">
                                     <a href="#" class="card-options-collapse" data-toggle="card-collapse"><i class="fe fe-chevron-up"></i></a>
                                     <a href="#" class="card-options-remove" data-toggle="card-remove"><i class="fe fe-x"></i></a>
@@ -1332,40 +1338,23 @@
                             </div>
                             <form class="card-body">
                                 <div class="form-group row">
-                                    <label class="col-md-3 col-form-label">Department Name <span class="text-danger">*</span></label>
+                                    <label class="col-md-3 col-form-label">课程名<span class="text-danger">*</span></label>
                                     <div class="col-md-7">
                                         <input type="text" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                    <label class="col-md-3 col-form-label">Head Of Department</label>
+                                    <label class="col-md-3 col-form-label">课程编号</label>
                                     <div class="col-md-7">
                                         <input type="text" class="form-control">
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <label class="col-md-3 col-form-label">Department Start Date <span class="text-danger">*</span></label>
-                                    <div class="col-md-7">
-                                        <input data-provide="datepicker" data-date-autoclose="true" class="form-control" placeholder="">
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-md-3 col-form-label">Student Capacity <span class="text-danger">*</span></label>
-                                    <div class="col-md-7">
-                                        <input type="text" class="form-control">
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <label class="col-md-3 col-form-label">Department Details <span class="text-danger">*</span></label>
-                                    <div class="col-md-7">
-                                        <textarea rows="4" class="form-control no-resize" placeholder="Please type what you want..."></textarea>
-                                    </div>
-                                </div>
+                               
                                 <div class="form-group row">
                                     <label class="col-md-3 col-form-label"></label>
                                     <div class="col-md-7">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                        <button type="submit" class="btn btn-outline-secondary">Cancel</button>
+                                        <button type="submit" class="btn btn-primary">提交</button>
+                                        <button type="submit" class="btn btn-outline-secondary">取消</button>
                                     </div>
                                 </div>
                             </form>
