--- a/equipmentMS/university/register.html
+++ b/equipmentMS/university/register.html
@@ -25,32 +25,32 @@
             <div class="card-body">
                 <div class="text-center">
                     <a class="header-brand" href="index.html"><i class="fa fa-graduation-cap brand-logo"></i></a>
-                    <div class="card-title">Create new account</div>
+                    <div class="card-title">创建新账号</div>
                     <button type="button" class="btn btn-facebook"><i class="fa fa-facebook mr-2"></i>Facebook</button>
                     <button type="button" class="btn btn-google"><i class="fa fa-google mr-2"></i>Google</button>
                     <h6 class="mt-3 mb-3">Or</h6>
                 </div>
                 <div class="form-group">
-                    <label class="form-label">Name</label>
-                    <input type="text" class="form-control" placeholder="Enter name">
+                    <label class="form-label">用户名</label>
+                    <input type="text" class="form-control" placeholder="输入用户名">
                 </div>
                 <div class="form-group">
-                    <label class="form-label">Email address</label>
-                    <input type="email" class="form-control" placeholder="Enter email">
+                    <label class="form-label">手机号</label>
+                    <input type="email" class="form-control" placeholder="输入正确的手机号码">
                 </div>
                 <div class="form-group">
-                    <label class="form-label">Password</label>
-                    <input type="password" class="form-control" placeholder="Password">
+                    <label class="form-label">密码</label>
+                    <input type="password" class="form-control" placeholder="密码">
                 </div>
                 <div class="form-group">
                     <label class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" />
-                    <span class="custom-control-label">Agree the <a href="#">terms and policy</a></span>
+                    <span class="custom-control-label">同意 <a href="#">条款和政策</a></span>
                     </label>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-block">Create new account</button>
-                    <div class="text-muted mt-4">Already have account? <a href="login.html">Sign in</a></div>
+                    <button type="submit" class="btn btn-primary btn-block">创建新用户</button>
+                    <div class="text-muted mt-4">已经有账号 <a href="login.html">登录</a></div>
                 </div>
             </div>
         </div>
