--- a/equipmentMS/university/courses.html
+++ b/equipmentMS/university/courses.html
@@ -986,7 +986,7 @@
                     <div class="header-action">
                         <h1 class="page-title">课程管理</h1>
                         <ol class="breadcrumb page-breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">实验器材管理系统</a></li>
+                            <li class="breadcrumb-item"><a href="#">实验器材管理</a></li>
                             <li class="breadcrumb-item active" aria-current="page">课程管理</li>
                         </ol>
                     </div>
