--- a/equipmentMS/university/departments.html
+++ b/equipmentMS/university/departments.html
@@ -819,7 +819,7 @@
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="What you want to find">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button">搜索</button>
+                                <button class="btn btn-outline-secondary" type="button">Search</button>
                             </div>
                         </div>
                     </div>
