--- a/equipmentMS/university/index.html
+++ b/equipmentMS/university/index.html
@@ -782,7 +782,7 @@
                         <li><a href="students.html"><i class="fa fa-users"></i><span>Students</span></a></li>
                         <li><a href="departments.html"><i class="fa fa-users"></i><span>Departments</span></a></li>
                         <li><a href="courses.html"><i class="fa fa-graduation-cap"></i><span>课程管理</span></a></li>                        
-                        <li><a href="library.html"><i class="fa fa-book"></i><span>Library</span></a></li>
+                        <li><a href="library.html"><i class="fa fa-book"></i><span>器材管理</span></a></li>
                         <li><a href="holiday.html"><i class="fa fa-bullhorn"></i><span>Holiday</span></a></li>
                         <li class="g_heading">Extra</li>
                         <li><a href="events.html"><i class="fa fa-calendar"></i><span>Calender</span></a></li>
@@ -1041,7 +1041,7 @@
                             <div class="card-body">
                                 <a href="library.html" class="my_sort_cut text-muted">
                                     <i class="fa fa-book"></i>
-                                    <span>Library</span>
+                                    <span>器材管理</span>
                                 </a>
                             </div>
                         </div>
