--- a/equipmentMS/university/library.html
+++ b/equipmentMS/university/library.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-<title>:: Ericsson :: Library</title>
+<title>:: Ericsson :: 器材管理</title>
 
 <!-- Bootstrap Core and vandor -->
 <link rel="stylesheet" href="../assets/plugins/bootstrap/css/bootstrap.min.css" />
@@ -783,7 +783,7 @@
                         <li><a href="students.html"><i class="fa fa-users"></i><span>Students</span></a></li>
                         <li><a href="departments.html"><i class="fa fa-users"></i><span>Departments</span></a></li>
                         <li><a href="courses.html"><i class="fa fa-graduation-cap"></i><span>Courses</span></a></li>                        
-                        <li class="active"><a href="library.html"><i class="fa fa-book"></i><span>Library</span></a></li>
+                        <li class="active"><a href="library.html"><i class="fa fa-book"></i><span>器材管理</span></a></li>
                         <li><a href="holiday.html"><i class="fa fa-bullhorn"></i><span>Holiday</span></a></li>
                         <li class="g_heading">Extra</li>
                         <li><a href="events.html"><i class="fa fa-calendar"></i><span>Calender</span></a></li>
@@ -819,9 +819,9 @@
                 <div class="page-header">
                     <div class="left">                        
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="What you want to find">
+                            <input type="text" class="form-control" placeholder="搜索器材">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="button">Search</button>
+                                <button class="btn btn-outline-secondary" type="button">搜索</button>
                             </div>
                         </div>
                     </div>
@@ -839,7 +839,7 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Auth</a>
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">用户</a>
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" href="login.html">Login</a>
                                     <a class="dropdown-item" href="register.html">Register</a>
@@ -978,15 +978,15 @@
             <div class="container-fluid">
                 <div class="d-flex justify-content-between align-items-center ">
                     <div class="header-action">
-                        <h1 class="page-title">Library</h1>
+                        <h1 class="page-title">器材管理</h1>
                         <ol class="breadcrumb page-breadcrumb">
                             <li class="breadcrumb-item"><a href="#">Ericsson</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Library</li>
+                            <li class="breadcrumb-item active" aria-current="page">器材管理</li>
                         </ol>
                     </div>
                     <ul class="nav nav-tabs page-header-tab">
-                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#Library-all">List View</a></li>
-                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Library-add">Add</a></li>
+                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#Library-all">器材列表</a></li>
+                        <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Library-add">添加器材</a></li>
                         <li class="nav-item"><a class="nav-link" id="Library-tab-Boot" data-toggle="tab" href="#Library-add-Boot">Add Bootstrap Style</a></li>
                     </ul>
                 </div>
@@ -1002,13 +1002,13 @@
                                     <table class="table table-hover js-basic-example dataTable table-striped table_custom border-style spacing5">
                                         <thead>
                                             <tr>
-                                                <th>#</th>
-                                                <th>Title</th>
-                                                <th>Subject</th>
-                                                <th>Department</th>
-                                                <th>Year</th>
-                                                <th>Type</th>
-                                                <th>Status</th>
+                                                <th>ID</th>
+                                                <th>名称</th>
+                                                <th>规格</th>
+                                                <th>单价</th>
+                                                <th>损耗率</th>
+                                                <th>备注</th>
+                                                
                                             </tr>
                                         </thead>
                                         <tbody>
