--- a/equipmentMS/university/hostel.html
+++ b/equipmentMS/university/hostel.html
@@ -780,7 +780,7 @@
                         <li><a href="departments.html"><i class="fa fa-users"></i><span>Departments</span></a></li>
                         <li><a href="courses.html"><i class="fa fa-graduation-cap"></i><span>Courses</span></a></li>                        
                         <li><a href="library.html"><i class="fa fa-book"></i><span>Library</span></a></li>
-                        <li><a href="holiday.html"><i class="fa fa-bullhorn"></i><span>Holiday</span></a></li>
+                        <li><a href="holiday.html"><i class="fa fa-bullhorn"></i><span>器材预测</span></a></li>
                         <li class="g_heading">Extra</li>
                         <li><a href="events.html"><i class="fa fa-calendar"></i><span>Calender</span></a></li>
                         <li><a href="app-chat.html"><i class="fa fa-comments-o"></i><span>Chat App</span></a></li>
@@ -919,7 +919,7 @@
                                                 <span class="avatar avatar-blue"><i class="fa fa-check"></i></span>
                                             </div>
                                             <div class="feeds-body ml-3">
-                                                <p class="text-muted mb-0">Campaign <strong class="text-blue font-weight-bold">Holiday</strong> is nearly reach budget limit.</p>
+                                                <p class="text-muted mb-0">Campaign <strong class="text-blue font-weight-bold">器材预测</strong> is nearly reach budget limit.</p>
                                             </div>
                                         </li>
                                         <li>
