--- a/equipmentMS/university/courses.html
+++ b/equipmentMS/university/courses.html
@@ -312,7 +312,7 @@
                     <div class="card-body top_counter">
                         <div class="icon bg-gray"><i class="fa fa-sitemap"></i> </div>
                         <div class="content">
-                            <span>Department</span>
+                            <span>库存</span>
                             <h5 class="number mb-0">14</h5>
                         </div>
                     </div>
@@ -787,7 +787,7 @@
                         <li><a href="professors.html"><i class="fa fa-black-tie"></i><span>Professors</span></a></li>
                         <li><a href="staff.html"><i class="fa fa-user-circle-o"></i><span>Staff</span></a></li>
                         <li><a href="students.html"><i class="fa fa-users"></i><span>Students</span></a></li>
-                        <li><a href="departments.html"><i class="fa fa-users"></i><span>Departments</span></a></li>
+                        <li><a href="departments.html"><i class="fa fa-users"></i><span>库存</span></a></li>
                         <li class="active"><a href="courses.html"><i class="fa fa-graduation-cap"></i><span>课程管理</span></a></li>                        
                         <li><a href="library.html"><i class="fa fa-book"></i><span>Library</span></a></li>
                         <li><a href="holiday.html"><i class="fa fa-bullhorn"></i><span>Holiday</span></a></li>
@@ -994,7 +994,7 @@
                         <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#Courses-all">课程列表</a></li>
                         <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Courses-add">添加开课计划</a></li>
                         <li class="nav-item"><a class="nav-link" id="Courses-tab-Boot" data-toggle="tab" href="#Courses-add-Boot">添加课程</a></li>
-                        <li class="nav-item"><a class="nav-link" id="fix-course-datail-tab" data-toggle="tab" href="#fix-course-datail-div">添加课程</a></li>
+                        <li class="nav-item"><a class="nav-link" id="fix-course-datail-tab" data-toggle="tab" href="#fix-course-datail-div">修改课程详情</a></li>
                     </ul>
                 </div>
             </div>
