--- a/equipmentMS/university/index.html
+++ b/equipmentMS/university/index.html
@@ -789,7 +789,7 @@
                         <li class="g_heading">Extra</li>
                         <li><a href="events.html"><i class="fa fa-calendar"></i><span>Calender</span></a></li>
                         <li><a href="app-chat.html"><i class="fa fa-comments-o"></i><span>Chat App</span></a></li>
-                        <li><a href="app-contact.html"><i class="fa fa-address-book"></i><span>Contact</span></a></li>
+                        <li><a href="app-contact.html"><i class="fa fa-address-book"></i><span>库存日志</span></a></li>
                         <li><a href="app-filemanager.html"><i class="fa fa-folder"></i><span>FileManager</span></a></li>
                         <li><a href="our-centres.html"><i class="fa fa-map"></i><span>OurCentres</span></a></li>
                         <li><a href="gallery.html"><i class="fa fa-camera-retro"></i><span>Gallery</span></a></li>
